* dpost: The PostScript output is now expected to conform to Adobe's
  Document Structuring Conventions, version 3.0.
* [nt]roff: Hyphenation for languages other than English has been added
  using the "libhnj" variant from the OpenOffice project. The ".hylang"
  request has been introduced to select between languages. Hyphenation
  files have been derived from TeX sources.
* troff: The ".fzoom" request allows to zoom the characters of a font.
* [nt]roff: The ".lc_ctype" request can be used to set the LC_CTYPE
  localization setting from within a document.
* troff: It is now possible to use "\[name]", where name is a character
  defined in the .afm file for the current font.
* troff: The ".track" request for tracking letter space has been added.
* troff: The ".fallback" request for selecting the order in which fonts
  are searched for missing characters in the current font has been added.
* troff: The ".hidechar" request hides characters from a font which are
  then searched using the fallback sequence.
* troff: Ligatures from expert fonts can be used transparently with the
  ".flig" request.
* [nt]roff: Environments selected with the ".ev" command can be given
  names, and their number is no longer statically limited.
* [nt]roff: The ".evc" request copies another environment to the current
  one.
* [nt]roff: The ".chop" request deletes the last character from a macro,
  string, or diversion.
* [nt]roff: The ".return" request returns immediately from a macro.
* [nt]roff: The "\:" escape inserts an optional line break but generates
  no hyphen if the line is split.
* [nt]roff: The "\~" escape is similar to "\ " but inserts a space that
  stretches like a regular " " when the line is adjusted.
* [nt]roff: The "\E" escape is similar to "\e" but is not interpreted in
  copy mode.
* troff/dpost: The "\X'Sync'" escape forces dpost to write position and
  font information to the generated PostScript. This is sometimes useful